Работают периоды и поиск почти весь (вырубает, не могу явно объяснить и понять разницу между поисками)